# vision_system_hw

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
1_task/: CMakeLists.txt
1_task/include/: matrix.h
1_task/src/: matrix.cpp
1_task/test/: CMakeLists.txt
1_task/test/src/: test_matrix.cpp
2_task/: CMakeLists.txt  Image.ipynb
2_task/data/: data.csv
2_task/src/: main.cpp
3_task/: CMakeLists.txt
3_task/include/: solver.h  test.h
3_task/src/: main.cpp  solver.cpp  test.cpp
4_task/: CMakeLists.txt  main.cpp
4_task/include/: frame.h
4_task/scr/: frame.cpp
4_task/src/: main.cpp
5_task/: CMakeLists.txt
5_task/src/: main.cpp
